# hungarian-peter-wordcloud

./: README.md  pyproject.toml
hungarian_peter_wordcloud/: __init__.py  hp_aws_wordcloud.ipynb
hungarian_peter_wordcloud/bedrock_example/: bedrock_example.py
hungarian_peter_wordcloud/data/articles_raw/: articles_2024-12-17_19-01-26.json
hungarian_peter_wordcloud/scraper/: scraper.py
