[tool.poetry]
name = "hungarian-peter-wordcloud"
version = "0.1.0"
description = "A lightweight project to assess the labels and sentiments of certain politicians on certain Hungarian news sites. The repository name refers to Magyar Péter, who is in the focus of the analysis."
authors = ["Istvan Peter Jaray <istvanpeterjaray@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
jupyter = "^1.1.1"
numpy = "^2.2.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.35.81"
loguru = "^0.7.3"
seaborn = "^0.13.2"
plotly-express = "^0.4.1"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.0"
path = "^17.0.0"
aiohttp = "^3.11.10"
tqdm = "^4.67.1"
awscli = "^1.36.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
